All functionality implemented, minor modifications made to data display

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /output/
 /runs/
+/.idea/csv-editor.xml
+/.idea/discord.xml
+/.idea/git_toolbox_prj.xml
+/.idea/HW_03.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/other.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
